@@ -62,9 +62,9 @@
 // e00000-efffff : idem
 // d00000-ffffff : idem
 
-#define END_OF_FLASH_ROM (tihw.hw_type == HW4 ? (uint32_t)0xffffff : (uint32_t)0xbfffff)
+#define END_OF_FLASH_ROM (tihw.hw_type >= HW4 ? (uint32_t)0xffffff : (uint32_t)0xbfffff)
 #undef ROM_SIZE_TI89T
-#define ROM_SIZE_TI89T (tihw.hw_type == HW4 ? 8*MB : 4*MB)
+#define ROM_SIZE_TI89T (tihw.hw_type >= HW4 ? 8*MB : 4*MB)
 
 int ti89t_mem_init(void)
 {
