@@ -21,6 +21,7 @@ SubVersion: $Id$
 	- [kevin] $2162: added Seamonkey to the browser list, suggest Firefox instead of the obsolete Mozilla Suite
 	- [kevin] $2163: clear command line in execute_command
 	- [kevin] $2164: changed DCOP/OLE ready_for_transfers to really check if the emulated calculator is ready
+	- [kevin] $2166: fixed FlashROM identifiers so the HW4 8 MB FlashROM gets detected properly by AMS 3.10
 
 - 10/05/2006, version 2.81:
 	- [roms] $2059: renamed 'code/source' window into 'disassembly'
